--- a/strona internetowa 12.09.24/css.css
+++ b/strona internetowa 12.09.24/css.css
@@ -15,3 +15,11 @@
     border: 8px solid whitesmoke;
 
    }
+   
+   .definicja {
+    font-size: xx-large;
+    color: black;
+    background-color: beige;
+    border: 8px solid whitesmoke;
+
+   }
