--- a/Hubert Pniewski/styl.css
+++ b/Hubert Pniewski/styl.css
@@ -1,36 +1,23 @@
-* {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+*{
+    font-family: Verdana;
 }
 
-#blok-boczny img {
-    width: 100%;
+aside img{
+    width: 20%;
     height: 610px;
     float: left;
 }
 
-#blok-naglowkowy,
-#blok-nawigacyjny,
-#blok-stopki {
+header, nav, footer{
     background-color: mediumpurple;
     color: white;
     width: 80%;
     text-align: center;
     float: left;
+    text-shadow: 4px dimgray;
 }
 
-#blok-naglowkowy {
-    height: 50px;
-    line-height: 50px;
-    letter-spacing: 4px;
-    color: dimgray;
-}
-
-#blok-nawigacyjny{
-    height: 50px;
-    margin: 10px 0;
-}
-
-#blok-glowny {
+main{
     background-color: thistle;
     width: 80%;
     height: 450px;
@@ -40,23 +27,25 @@
 
 ul{
     list-style-type: disc;
-    margin: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
     width: 70%;
     border: 2px solid mediumpurple;
 }
 
 li{
-    margin: 10x;
-    padding: 5px;
+    padding: 10px;
 }
 
-li:nth-child(even) {
+li:nth-child(even){
     background-color: #DDCADD;
 }
 
 li:nth-child(odd){
-background-color: lavender;
+    background-color: lavender;
 }
 
 button{
@@ -64,7 +53,7 @@ button{
     background-color: mediumpurple;
     color: white;
     border: none;
-    height: 30px;
+    height: 25px;
     padding: 5px 10px;
     cursor: pointer;
 }
